skeplib/tests/fixtures/resolver/invalid/duplicate_imported_operator_precedence/main.sk
from a import xoxo;
from b import xoxo;
fn main() -> Int { return 1 `xoxo` 2; }
